error.txt
1. git 충돌
mh1 브랜치에 node_modules를 포함 시키지 않고 있다가 push 하기 위해 merge 하는 과정에서 에러 발생
=> unstaged 상태의 파일이 존재해서 에러 발생
=> git merging is not possible because you have unmerged files 에러 발생
# git status로 상태 확인 후
git commit -am "메세지" a옵션 : -a 옵션을 붙이면 변경된 파일(신규로 추가된 파일을 제외)을 검출하여 인덱스에 추가하고, 그것들을 커밋하는 동작을 명령어로 실행할 수 있습니다. 

git pull
git push origin master 
마스터 브랜치일때 하기/

git checkout mh1 으로 mh1 브랜치에서 작업 중이다가 commit 한 다음에
git checkout master로 돌아가서 git merger mh1 으로 병합 한 후 
git pull (충돌방지) 다음 git push origin master 해주기 

2. node_modules 폴더 재설치 필요
-> node_modules 폴더를 git 에서 다시 push 해왔더니 npm start시 오류가 발생.
> myKeyword@0.0.0 start C:\Users\조민희\Desktop\myKeyword
> node ./bin/www

module.js:130
    throw e;
    ^

SyntaxError: Error parsing C:\Users\조민희\Desktop\myKeyword\node_modules\http-errors\package.json: Unexpected token < in JSON at position 3
    at JSON.parse (<anonymous>)
    at readPackage (module.js:126:52)
    at tryPackage (module.js:136:13)
    at Function.Module._findPath (module.js:218:20)
    at Function.Module._resolveFilename (module.js:545:25)
    at Function.Module._load (module.js:474:25)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (C:\Users\조민희\Desktop\myKeyword\app.js:1:81)
    at Module._compile (module.js:652:30)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! myKeyword@0.0.0 start: `node ./bin/www`
npm ERR! Exit status 1
npm ERR!
npm ERR! Failed at the myKeyword@0.0.0 start script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     C:\Users\조민희\AppData\Roaming\npm-cache\_logs\2019-01-14T09_09_32_003Z-debug.log

node_modules가 제대로 설치가 되지 않아 발생한거 같음. 
npm install로 모듈을 다시 설치해서 해결.
